--- a/Web.Debug.config
+++ b/Web.Debug.config
@@ -9,7 +9,7 @@
     finds an attribute "name" that has a value of "MyDB".
 
     <connectionStrings>
-      <add name="MyDB"
+      <add name="MyDB newdb"
         connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
